@@ -30,8 +30,7 @@ Trunk -  Unreleased
     HIVE-1178. enforce bucketing for a table.
     (Namit Jain via He Yongqiang)
 
-  IMPROVEMENTS
-
+  IMPROVEMENTS 
     HIVE-983. Function from_unixtime takes long.
     (Ning Zhang via zshao)
 
@@ -94,6 +93,9 @@ Trunk -  Unreleased
     (John Sichi via zshao)
 
     HIVE-1181. Make it optional to check file format. (Yongqiang He via zshao)
+
+    HIVE-1182. Fix TestCliDriver too many open file error.
+    (Zheng Shao via Ning Zhang)
 
   OPTIMIZATIONS
 
